--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-indexes-of-oracle-mode/2.create-an-index-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/3.manage-indexes-of-oracle-mode/2.create-an-index-of-oracle-mode.md
@@ -2,47 +2,78 @@
 
 您可以通过 `CREATE INDEX` 语句为表创建索引。
 
-OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或普通索引。如果是分区表的唯一局部索引，则必须包含表分区的分区键。
+## 背景信息
+
+OceanBase 数据库支持在非分区表和分区表上创建索引，索引可以是局部索引或全局索引，也可以是唯一索引或非唯一索引。
 
 本节主要介绍如何在非分区表上创建索引，分区表上索引的创建请参见 [创建分区表索引](../../../4.replica-management/2.manage-partition-table/1.oracle-mode/9.create-partition-table-index-of-oracle-mode/2.local-index-of-oracle-mode.md) 章节。
 
-创建索引的 SQL 语法格式如下：
+## 注意事项
+
+创建索引时需要注意，在 OceanBase 数据库中，索引名称在表范围内不能重复。
+
+## 创建普通索引
+
+可以使用 `CREATE TABLE` 语句、`CREATE INDEX` 语句或 `ALTER TABLE` 语句来创建普通索引。
+
+### 使用 `CREATE TABLE` 语句创建索引
+
+可以通过 `CREATE TABLE` 语句在创建表时即为表创建索引。
+
+语法如下：
 
 ```sql
-CREATE [UNIQUE] INDEX index_name ON table_name ( column_list ) [LOCAL | GLOBAL] [ PARTITION BY column_list PARTITIONS N ] ;
+CREATE TABLE table_name(column_name data_type,[column_name data_type,...] [UNIQUE] INDEX index_name(column_name));
 ```
 
-<main id="notice" type='explain'>
-<h4>说明</h4>
-<p>索引名称在租户范围内不能重复。</p>
-</main>
+相关参数说明如下：
 
-* `index_name` ：索引名。
+* `table_name`：指定待创建的表的表名。
 
-* `UNIQUE` ：代表唯一索引。
+* `column_name`：指定表的列。
 
-* `table_name` ：表名，指需要创建索引的表。
+* `data_type`：指定表中各列对应的数据类型。
 
-* `column_list` ：指出对哪些列进行索引，多列时各列之间用逗号分隔。
+* `UNIQUE`：可选，表示唯一索引。创建唯一索引时需要添加该关键字。
 
-* `LOCAL` ：局部索引。
+* `index_name`：指定待添加的索引的索引名。
 
-* `GLOBAL` ：全局索引。在创建索引时如果不显式指定 `global` 或 `local` ，则默认是 `global` 。
-
-* `PARTITION BY column_list PARTITIONS N` ：指定分区方式及类型。
-
-为非分区表创建普通索引。示例如下：
+创建 `tbl1` 表，同时添加索引 `tbl1_idx1` 的示例如下：
 
 ```sql
-obclient> CREATE INDEX t1_name_ind ON t1(name);
-Query OK, 0 rows affected (0.43 sec)
-
-obclient> SELECT index_name,index_type,table_owner,table_name,uniqueness FROM user_indexes WHERE table_name='T1';
-+--------------------------+------------+-------------+------------+------------+
-| INDEX_NAME               | INDEX_TYPE | TABLE_OWNER | TABLE_NAME | UNIQUENESS |
-+--------------------------+------------+-------------+------------+------------+
-| T1_OBPK_1585822641424088 | NORMAL     | TPCC        | T1         | UNIQUE     |
-| T1_NAME_IND              | NORMAL     | TPCC        | T1         | NONUNIQUE  |
-+--------------------------+------------+-------------+------------+------------+
-2 rows in set
+CREATE TABLE tbl1(id NUMBER,name VARCHAR2(18),day DATE,PRIMARY KEY (id),INDEX tbl1_idx1 (name));
 ```
+
+### 使用 `CREATE INDEX` 语句创建索引
+
+可以通过 `CREATE INDEX` 语句为已有的表创建索引。
+
+语法如下：
+
+```sql
+CREATE [UNIQUE] INDEX index_name ON table_name ( column_name );
+```
+
+相关参数说明如下：
+
+* `index_name`：指定待添加的索引的索引名。
+
+* `UNIQUE`：可选，表示唯一索引。创建唯一索引时需要添加该关键字。
+
+* `table_name`：指定待添加索引的表的表名。
+
+* `column_list`：指定对哪些列进行索引，指定多列时，各列之间用英文逗号分隔。
+
+创建表 `tbl2` 后，再创建索引 `tbl2_idx1` 的示例如下：
+
+1. 创建表 `tbl2`。
+
+   ```sql
+   CREATE TABLE tbl2(id NUMBER,name VARCHAR2(20));
+   ```
+
+2. 在表 `tbl2` 上创建索引 `tbl2_idx1`。
+
+   ```sql
+   CREATE INDEX tbl2_idx1 ON tbl2(name);
+   ```
