修改 9.generate-job-name-oracle.md

--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/9.generate-job-name-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/9.generate-job-name-oracle.md
@@ -32,6 +32,6 @@ in_type_name        IN VARCHAR2 DEFAULT 'JOB$_') RETURN VARCHAR2;
 
 ```sql
 BEGIN 
-   DBMS_SCHEDULER.GENERATE_JOB_NAME (in_type_name => 'JOB$_') RETURN VARCHAR2;
+   DBMS_SCHEDULER.GENERATE_JOB_NAME (in_type_name => 'JOB$_');
 END;
 ```
