--- a/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/en-US/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -1,105 +1,94 @@
 # Deploy OceanBase Database in a Kubernetes cluster
 
-This topic describes how to use ob-operator to deploy OceanBase Database in a Kubernetes cluster. 
+This topic describes how to deploy OceanBase Database in a Kubernetes environment by using ob-operator. Currently, only Kubernetes version 1.23.6 is tested, and if you encounter any issues while deploying other versions, feel free to contact us.
 
-Like other operators, ob-operator aims to run OceanBase Database in a container of a Kubernetes cluster. ob-operator supports the creation and deletion of OceanBase clusters, complete lifecycle management for nodes, and OceanBase Database Proxy (ODP) management, and will support features such as tenant management and multiple Kubernetes clusters in the future. 
+The topic is divided into three parts:
 
-You can perform the following steps to use ob-operator to deploy OceanBase Database. 
-
-## Deploy CRDs
-
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
-```
+1. Deploy ob-operator
+2. Deploy OceanBase Database
+3. Monitor OceanBase Database
 
 ## Deploy ob-operator
 
-### Deploy ob-operator based on the default configurations
+Using ob-operator can simplify the deployment and operation of OceanBase Database in a Kubernetes cluster. The following two ways are available to deploy ob-operator:
 
-```bash
+### Deploy ob-operator with Helm
+
+You can deploy ob-operator by running the following commands:
+
+```shell
+helm repo add ob-operator https://oceanbase.github.io/ob-operator/
+helm install ob-operator ob-operator/ob-operator --namespace=oceanbase-system --create-namespace  --version=1.1.0
+```
+
+### Deploy ob-operator with configuration files
+
+You can deploy ob-operator with configuration files by running the following commands:
+
+```shell
+# deploy CRD
+kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
+
+# deploy ob-operator
 kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/operator.yaml
 ```
 
-### Deploy ob-operator based on custom configurations
+#### Customize ob-operator
 
-You can modify the `operator.yaml` file based on your configurations.
-For example, you can add the startup parameter `--cluster-name` to the `operator.yaml` file. In this way, ob-operator processes only a custom resource definition (CRD) whose `cluster` value is the same as the value of the startup parameter `--cluster-name`. 
+If you need to customize ob-operator, download the configuration file by running the following commands:
 
-  <main id="notice" type='notice'>
-
-    <h4>Notice</h4>
-
-    <p>The value of <code>--cluster-name</code> must be the same as the value of <code>cluster</code> in the configurations of the OceanBase cluster. </p>
-
-  </main>
-
-Modify the `operator.yaml` file based on the following content:
-
-```yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: ob-operator-controller-manager
-  namespace: oceanbase-system
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      control-plane: controller-manager
-  template:
-    metadata:
-      labels:
-        control-plane: controller-manager
-    spec:
-      containers:
-      - args:
-        - --health-probe-bind-address=:8081
-        - --metrics-bind-address=127.0.0.1:8080
-        - --leader-elect
-        - --cluster-name=cn
-        command:
-        - /manager
-        image: ob-operator:latest
-        imagePullPolicy: Always
-        name: manager
+```shell
+# download the config file
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/crd.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/operator.yaml
 ```
 
-## Configure labels for Kubernetes nodes
+After you modify the configuration file, deploy ob-operator by running the following commands:
 
-You must configure labels for Kubernetes nodes. The labels must match the value of `nodeSelector` in the `obcluster.yaml` file. ob-operator will schedule the Pods to nodes with the corresponding labels. 
-We recommend that you specify the key of a label to `topology.kubernetes.io/zone`. We recommend that you configure different labels for different zones for disaster recovery. 
-
-```bash
-kubectl label node nodename topology.kubernetes.io/zone=zonename
-kubectl label node ${node_name} topology.kubernetes.io/zone=${zone_name}
+```shell
+# after making some modification
+kubectl apply -f crd.yaml
+kubectl apply -f operator.yaml
 ```
 
+## Deploy OceanBase Database
+
+### Preparations
+
+#### Configure labels for Kubernetes nodes
+
+ob-operator uses `nodeSelector` in the `obcluster.yaml` configuration file of OceanBase Database to determine the distribution of observer nodes. Therefore, you need to configure labels for the Kubernetes nodes first.
+
+You can set the label for a node by running the following command:
+
+```shell
+kubectl label node <node_name> <label_key>=<label_value>
+
+# for example
+kubectl label node node1 ob.zone=zone1
+```
 ## Deploy local-path-provisioner
 
-In the default configurations of ob-operator, local-path provisioner is used. Therefore, you must get it ready in advance.
+To deploy OceanBase Database by using ob-operator, create a Persistent Volume Claim (PVC) as storage. For optimal performance, local storage is recommended. This topic uses local-path-provisioner to manage PVC.
 
-Run the following command to deploy local-path-provisioner:
+Use the following command to deploy local-path-provisioner:
 
-```text
-kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.22/deploy/local-path-storage.yaml
+```shell
+kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.24/deploy/local-path-storage.yaml
 ```
 
-For more information, see <https://github.com/rancher/local-path-provisioner>.
+For more information, see [local-path-provisioner](https://github.com/rancher/local-path-provisioner).
 
-## Deploy the OceanBase cluster
 
-### Deploy the OceanBase cluster based on the default configurations
+### Deploy OceanBase Database
 
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
+The OceanBase cluster is defined in a YAML configuration file. You can customize the configuration file provided by ob-operator to suit your needs. Use the following command to download the `obcluster.yaml` configuration file for OceanBase Database:
+
+```shell
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obcluster.yaml
 ```
 
-### Deploy the OceanBase cluster based on custom configurations
-
-You can modify the `obcluster.yaml` file based on your configurations. 
-Modify the `operator.yaml` file based on the following content:
+The sample content of the configuration file is shown below.
 
 ```yaml
 apiVersion: cloud.oceanbase.com/v1
@@ -109,7 +98,8 @@ metadata:
   namespace: obcluster
 spec:
   imageRepo: oceanbasedev/oceanbase-cn
-  tag: 4.0.0-snapshot-20230130110559
+  tag: v4.1.0.0-100000192023032010
+  imageObagent: oceanbase/obagent:1.2.0
   clusterID: 1
   topology:
     - cluster: cn
@@ -117,21 +107,21 @@ spec:
       - name: zone1
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone1
+          ob.zone: zone1
         replicas: 1
       - name: zone2
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone2
+          ob.zone: zone2
         replicas: 1
       - name: zone3
         region: region1
         nodeSelector:
-          topology.kubernetes.io/zone: zone3
+          ob.zone: zone3
         replicas: 1
       parameters:
-        - name: freeze_trigger_percentage
-          value: "30"
+        - name: log_disk_size
+          value: "40G"
   resources:
     cpu: 2
     memory: 10Gi
@@ -145,42 +135,62 @@ spec:
       - name: log
         storageClassName: "local-path"
         size: 30Gi
+      - name: obagent-conf-file
+        storageClassName: "local-path"
+        size: 1Gi
+    volume:
+        name: backup
+        nfs:
+          server: ${nfs_server_address}
+          path: /opt/nfs
+          readOnly: false
 ```
 
-Parameters:
+Parameters in the sample content are described as follows:
 
-- `imageRepo`: the image repository of OceanBase Database. 
-- `tag`: the tag of the OceanBase image. 
+- `imageRepo`: The image repository of OceanBase Database. 
+  
+- `tag`: The tag of the OceanBase image. 
+
+- `imageObagent`: The image of OBAgent, which is used to collect monitoring data for the OceanBase cluster.
 
 - `cluster`: To deploy an OceanBase cluster in a Kubernetes cluster, set the value of this parameter to the same as that of the startup parameter `--cluster-name` of ob-operator. 
-- `parameters`: the custom parameters of OceanBase Database. Specify the parameters as needed. 
 
-- `cpu`: the number of CPU cores. We recommend that you set the value to an integer greater than 2. A value smaller than 2 may cause system exceptions. 
+- `parameters`: The custom parameters of OceanBase Database. Specify the parameters as needed. 
 
-- `memory`: the memory size. We recommend that you set the value to an integer greater than 10 GiB. A value smaller than 10 GiB may cause system exceptions. 
+- `cpu`: The number of pod CPU cores. We recommend that you set the value to an integer greater than 2. A value smaller than 2 may cause system exceptions. 
 
-- `data-file`: the data file size. The value must be the same as that of the `datafile_size` parameter of the OBServer node. We recommend that you set this parameter to a value that is three times the memory size. You can specify `storageClassName` as needed. 
+- `memory`: The pod memory size. We recommend that you set the value to an integer greater than 10 GiB. A value smaller than 10 GiB may cause system exceptions. 
 
-- `data-log`: the data directory size. The value must be the same as the size of the `data_dir` directory of the OBServer node. We recommend that you set this parameter to a value that is five times the memory size. You can specify `storageClassName` as needed. 
+- `data-file`: The data storage configuration of OceanBase Database. You can specify the size and `storageClassName` to use as the data directory for OceanBase Database. We recommend that you configure a value at least 3 times the size of memory or larger.
 
-- `log`: the size of the system log directory of the OBServer node. We recommend that you set a value greater than 30 GiB. You can specify `storageClassName` as needed. 
+- `data-log`: The log storage configuration of OceanBase Database. You can specify the size and `storageClassName` to use as the Clog directory for OceanBase Database. We recommend that you configure a value at least 3 times the size of memory or larger.
 
-## Deploy ODP
+- `log`: The process log storage configuration of OceanBase Database. You can specify the size and `storageClassName` to use as the directory for storing process logs for OceanBase Database. We recommend that you configure a value of at least 10Gi or larger.
 
-### Deploy ODP based on the default configurations
+- `obagent-conf-file`: The storage configuration of OBAgent configuration files, which is used to store OBAgent configuration files. A smaller size, generally around 1Gi, is sufficient.
 
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
+- `volume`: The storage for backup data. If no backup requirement exists, this can be left unconfigured. However, once the cluster is created, it cannot be added later, so we recommend that you plan for this before deployment.
+
+After you modify the configuration file, run the following command to deploy the cluster:
+
+```shell
+kubectl apply -f obcluster.yaml
 ```
 
-### Deploy ODP based on custom configurations
+### Deploy OceanBase Database Proxy (ODP)
 
-You can modify the `obproxy.yaml` file based on your configurations. 
-Modify the `operator.yaml` file based on the following content:
+ODP is defined by using yaml configuration files. You can customize these files by referring to the configuration files of ob-operator. To download the ODP configuration files, run the following command:
+
+```shell
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obproxy/service.yaml
+```
+
+The sample content of the `deployment.yaml` file is shown below.
 
 ```yaml
-# deployment
+# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -190,7 +200,7 @@ spec:
   selector:
     matchLabels:
       app: obproxy
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       labels:
@@ -198,7 +208,7 @@ spec:
     spec:
       containers:
         - name: obproxy
-          image: oceanbase/obproxy-ce:3.2.3
+          image: oceanbasedev/obproxy-ce:4.1.0.0-7
           ports:
             - containerPort: 2883
               name: "sql"
@@ -210,13 +220,33 @@ spec:
             - name: OB_CLUSTER
               value: ob-test
             - name: RS_LIST
-              value: $(SVC_OB_TEST_SERVICE_HOST):$(SVC_OB_TEST_SERVICE_PORT)
+              value: $RS_LIST
           resources:
             limits:
               memory: 2Gi
               cpu: "1"
----
-# service
+```
+
+Parameters in the sample content are described as follows:
+
+- APP_NAME: The name of the ODP application.
+
+- OB_CLUSTER: The name of the OceanBase cluster that the ODP connects to.
+
+
+- RS_LIST: The `rs_list` of the OceanBase cluster, which has the format `${ip1}:${port1};${ip2}:${port2};${ip3}:${port3}`. Replace values in this format with actual ones. The following two ways are available to obtain the address of `rs_list`:
+
+  - Method 1: Connect to the OceanBase cluster and run the s `show parameters like 'rootservice_list';` command to view it.
+
+
+  - Method 2: Use the `kubectl get RootService rs-${cluster_name} -n ${namespace} -o yaml` command to query all Root Service addresses, and then concatenate them into a complete `rs_list`. Replace `${cluster_name}` and `${namespace}`  with the actual OceanBase cluster name and namespace.
+
+
+The `service.yaml` file opens two ports: one for SQL connection and the other for monitoring data collection. Here is what the `service.yaml` file contains:
+
+
+```yaml
+# service.yaml
 apiVersion: v1
 kind: Service
 metadata:
@@ -227,37 +257,74 @@ spec:
   selector:
     app: obproxy
   ports:
-    - name: "tcp"
+    - name: "sql"
       port: 2883
       targetPort: 2883
       nodePort: 30083
+    - name: "prometheus"
+      port: 2884
+      targetPort: 2884
+      nodePort: 30084
 ```
 
-Environment variables:
+After you modify the configuration file, run the following commands for deployment:
 
-- `APP_NAME`: the app name of ODP. 
-- `OB_CLUSTER`: the name of the OceanBase cluster to which ODP connects. 
-
-- `RS_LIST`: the Root Service list of the OceanBase cluster, which is generated based on the service address of the OceanBase cluster. After you deploy the OceanBase cluster, two environment variables are automatically generated: `SVC_OB_TEST_SERVICE_HOST` and `SVC_OB_TEST_SERVICE_PORT`. They respectively indicate the service address and port of the OceanBase cluster. 
-
-## Deploy Prometheus
-
-### Deploy Prometheus based on the default configurations
-
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/configmap.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
+```shell
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
 ```
 
-### Deploy Prometheus based on custom configurations
+### Connect to OceanBase Database
 
-The request address used by Prometheus to query OBAgent is configured by using a ConfigMap, and the requests are filtered by service name and port name. If custom configurations have been specified for the OceanBase cluster or ODP cluster, you must specify a regular expression for the service name based on the actual situation. 
+We recommend that you connect to OceanBase Database through ODP. After you deploy OceanBase Database and ODP, run the following command to obtain the service connection address of ODP:
+
+
+
+```shell
+kubectl get svc ${servicename} -n ${namespace}
+
+# for example
+kubectl get svc obproxy-service -n obcluster
+
+# output
+NAME              TYPE       CLUSTER-IP      EXTERNAL-IP   PORT(S)                         AGE
+obproxy-service   NodePort   xxx.xxx.xxx.xxx   <none>        2883:30083/TCP,2884:30084/TCP   1m
+```
+
+You can make a connection using CLUSTER-IP and PORT. The corresponding connection commands are as follows:
+
+```shell
+# use clusterip without password
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys oceanbase -A -c
+
+# use clusterip with password
+obclient -hxxx.xxx.xxx.xxx -P2883 -uroot@sys -p oceanbase -A -c
+
+# using nodeport without password
+obclient -h<node_ip> -P30083 -uroot@sys oceanbase -A -c
+
+# using nodeport with password
+obclient -h<node_ip> -P30083 -uroot@sys -p oceanbase -A -c
+```
+
+## Monitor OceanBase Database
+
+### Deploy Prometheus
+
+Download the Prometheus configuration files by running the following command and customize them by referring to the Prometheus configuration files provided by ob-operator:
+
+```shell
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/cluster-role-binding.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/configmap.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/prometheus/service.yaml
+```
+
+Prometheus selects the address for collecting data based on the name and port of the service in Kubernetes. You can configure filtering for data collection using regular expressions, as shown in the configuration in the `configmap.yaml` file:
 
 ```yaml
-# Key configurations in the ConfigMap
+# Configurations in configmap.yaml
 scrape_configs:
   - job_name: 'obagent-monitor-basic'
     kubernetes_sd_configs:
@@ -293,43 +360,51 @@ scrape_configs:
       action: keep
 ```
 
-You can specify the service name and port name based on the service discovery capability of Kubernetes. In this way, all endpoints can be automatically found. You can query the corresponding monitoring data based on the request path. 
+The configurations are described as follows:
 
-Configuration description:
+- Service and port:
 
-- Description of the service and port:
+  - OceanBase: ob-operator creates a service based on the OceanBase cluster name to obtain the exporter address. The naming rule for the service is `svc-monitor-${obcluster_name}`, and the port name is `monagent`. If you customized the cluster name during deployment, modify the relevant configuration according to the actual cluster name.
+  
+  - ODP: You need to configure the corresponding ODP service and port name.
 
-   - OceanBase Database: ob-operator will create a service based on the name of the deployed OceanBase cluster. The service name is in the format of `svc-monitor-${obcluster_name}`, and the port name is `monagent`. If you have specified a name for the OceanBase cluster during deployment, you must modify the corresponding configurations based on the actual cluster name.
-   - ODP: You must configure the service name and port name for ODP.
+- Request path for monitoring metrics:
 
-- Request paths of monitoring metrics:
+  - OceanBase cluster: The request paths are `/metrics/ob/basic` and `/metrics/ob/extra`.
+  
+  - ODP cluster: ODP supports the ability to expose monitoring metrics using the Prometheus protocol, and the request path is `/metrics`.
 
-   - Monitoring metrics of OceanBase Database: `/metrics/ob/basic` and `/metrics/ob/extra`
+After you modify the configuration file, deploy it by running the following command:
 
-   - Monitoring metrics of ODP: `/metrics`. ODP supports the exposure of monitoring metrics by using the Prometheus protocol.
-
-### Perform verification
-
-Enter the Prometheus address in your browser and press Enter. On the page that appears, choose Status > Targets and verify whether the endpoints under `proxy-monitor`, `obagent-monitor-host`, `obagent-monitor-basic`, and `obagent	monitor-extra` are all in the UP state.
-Click Graph and enter a `PromQL` expression to query the configured parameters.
-
-## Deploy Grafana
-
-### Deploy Grafana based on the default configurations
-
-```bash
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/deployment.yaml
-kubectl apply -f https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/service.yaml
+```shell
+kubectl apply -f cluster-role.yaml
+kubectl apply -f cluster-role-binding.yaml
+kubectl apply -f configmap.yaml
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
 ```
 
-### Deploy Grafana based on custom configurations
+#### Verification
 
-Key configuration information of Grafana, including the address of the Prometheus data source, is set by using a ConfigMap. If Prometheus is deployed based on custom configurations, you must specify the actual service address.
+Open the Prometheus address in a browser and navigate to **Status** > **Targets** to verify that the `Endpoint` under  `proxy-monitor`, `obagent-monitor-host`, `obagent-monitor-basic`, and `obagent-monitor-extra` are all in the up state.
+
+Click on **Graph** to enter PromQL expressions and perform queries.
+
+### Deploy Grafana
+
+Download the Grafana configuration files by running the following command and customize them by referring to the Prometheus configuration files provided by ob-operator:
+
+```shell
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/configmap.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/pvc.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/deployment.yaml
+wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/grafana/service.yaml
+```
+
+The `configmap.yaml` file contains key configuration information about Grafana, including the address of the Prometheus data source. If Prometheus was customized during deployment, you need to configure the actual service address.
 
 ```yaml
-# Key configurations in the ConfigMap
+# Key configurations in configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -354,24 +429,32 @@ data:
     }
 ```
 
-Configuration description:
+The Grafana configuration uses the service address of Prometheus as the data source configuration (`url` field in `datasources`). You need to fill this in according to the actual deployment of Prometheus.
 
-- `url`: The service address of Prometheus will be used as the URL of the data source in the configurations of Grafana. You must specify the actual service address of Prometheus.
+After you modify the configuration file, deploy it by running the following command:
 
-### Perform verification
+```shell
+kubectl apply -f configmap.yaml
+kubectl apply -f pvc.yaml
+kubectl apply -f deployment.yaml
+kubectl apply -f service.yaml
+```
 
-Enter the Grafana address in your browser and press **Enter**. On the page that appears, enter the username and default password `admin` to log on. When you log on for the first time, you will be prompted to change the password.
-Three configured dashboards are available. You can directly import them.
+#### Verification
 
-- oceanbase: 15215
+Open the Grafana address in a browser and log on with the `admin` user. The default password is also `admin`, and you will be prompted to change it the first time you log on. The Grafana configuration includes the OceanBase Database dashboard by default, which you can view by opening the following link in a browser:
+
+```shell
+http://${node_ip}:${node_port}/d/oceanbase
+```
+
+You can view the host metrics and ODP monitoring templates by adding the following dashboard IDs.
+
 - Host: 15216
-- obproxy: 15354
-   After the import, you can view the corresponding monitoring charts.
 
-  <main id="notice" type='explain'>
+- ODP: 15354
 
-    <h4>Note</h4>
-
-    <p>Monitoring data will be displayed only after ODP receives actual requests.</p>
-
-  </main>
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>ODP monitoring data will only be displayed after actual requests are sent.</p>
+</main>
