--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
@@ -26,6 +26,12 @@
 
 * 解决方式：请联系技术支持人员协助排查。
 
+## ERROR 4004 (08S01) : Failed to listen to the port
+
+* OceanBase 错误码：4004
+* 错误原因：网络断开导致监听服务启动失败。
+* 解决方式：请联系技术支持人员协助排查。
+
 ## ERROR 4005 (HY000) : The object is initialized twice
 
 * OceanBase 错误码：4005
@@ -149,6 +155,12 @@
 * OceanBase 错误码：6230
 
 * 兼容 MySQL 错误码：4012
+
+## ERROR 4013 (HY001) : No memory or reach tenant memory limit
+
+* OceanBase 错误码：4013
+* 错误原因：租户或 OBServer 节点内存不足。
+* 解决方式：如果是普通租户内存不足，通过增加租户内存规格解决；如果是 OBServer 节点内存不足，请联系技术支持人员协助排查。
 
 ## ERROR 4014 (HY000) : Inner state error
 
