--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -141,7 +141,7 @@ ORA-00060：deadlock detected while waiting for resource
 
 * 解决方式：一个集群不支持同时配置多个仲裁服务。
 
-## EORA-00600: wait degration finished timeout
+## ORA-00600: wait degration finished timeout
 
 * OceanBase 错误码：4751
 
@@ -150,6 +150,44 @@ ORA-00060：deadlock detected while waiting for resource
 * 错误原因：Stop Server 时等待租户降级超时。
 
 * 解决方式：重新发起 Stop Server 命令直到成功。
+
+## ORA-00600：Invalid JSON text
+
+* OceanBase 错误码：5411
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
+## ORA-00600：Invalid JSON text in argument
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
+## ORA-00600：The JSON binary value contains invalid data
+
+* OceanBase 错误码：5413
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
+## ORA-00600：Invalid JSON path expression
+
+* OceanBase 错误码：5414
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
 ORA-00600：Cannot create a JSON value from a string
 ------------------------------------------------------------------------
@@ -228,6 +266,16 @@ ORA-00600：The JSON value is too big to be stored in a JSON column
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
+## ORA-00600：The JSON object contains a key name that is too long
+
+* OceanBase 错误码：5422
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
 ORA-00600：JSON column '%.\*s' cannot be used in key specification
 ---------------------------------------------------------------------------------------
 
@@ -294,6 +342,16 @@ ORA-00600：The JSON document exceeds the maximum depth
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
+## ORA-00600：JSON documents may not contain NULL member names
+
+* OceanBase 错误码：5429
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
 ORA-00600：Invalid default value for \\'%.\*s\\'
 --------------------------------------------------------------------
 
@@ -309,6 +367,26 @@ ORA-00600：A path expression is not a path to a cell in an array
 ------------------------------------------------------------------------------------
 
 * OceanBase 错误码：5431
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
+## ORA-00600：No value was found by '%.192s' on the specified path
+
+* OceanBase 错误码：5432
+
+* SQLSTATE：22032
+
+* 错误原因：内部错误码。
+
+* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
+## ORA-00600：More than one value was found by '%.192s' on the specified path
+
+* OceanBase 错误码：5433
 
 * SQLSTATE：22032
 
