--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/12.set-job-argument-value-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/12.set-job-argument-value-oracle.md
@@ -62,9 +62,11 @@ BEGIN
                    program_name           =>'empprog',
                    argument_name          =>'emp_no',
                    argument_position      => 1,
-                   argument_type          =>'VARCHAR2');
+                   argument_type          =>'VARCHAR2',
+                   default_value          => '0',
+                   out_argument           => false);
 
-        DBMS_SCHEDULER.ENABLE (name => 'empprog');
+        DBMS_SCHEDULER.ENABLE (job_name => 'empprog');
 
         DBMS_SCHEDULER.DROP_JOB (
                    job_name               =>'job_insert_emp', 
@@ -82,6 +84,6 @@ BEGIN
                    argument_name          =>'emp_no',
                    argument_value         =>'1357');
 
-        DBMS_SCHEDULER.ENABLE ( name => 'job_insert_emp'); 
+        DBMS_SCHEDULER.ENABLE ( job_name => 'job_insert_emp'); 
 END;
 ```
