--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/4.define-program-argument-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/4.define-program-argument-oracle.md
@@ -38,6 +38,14 @@ out_argument            IN BOOLEAN DEFAULT FALSE);
 
 在启用程序之前，必须定义从 1 到 `number_of_arguments` 值的所有程序参数。如果未使用此过程定义参数的默认值，则必须在作业中定义值。
 
-定义程序参数需要您是该程序的所有者或对该程序拥有 `ALTER` 权限。如果您有 `CREATE ANY JOB` 权限，也可以定义程序参数。
-
 `DEFINE_PROGRAM_ARGUMENT` 仅支持 SQL 类型的参数。因此，程序或作业参数不支持非 SQL类型的参数值，例如布尔值。
+
+
+## 示例
+
+```sql
+BEGIN
+    dbms_scheduler.define_program_argument(program_name => 'CIDPPROGRAM_', argument_position => 1, argument_type => 'int', default_value => '0', out_argument => false);
+    COMMIT;
+END;/
+```
