--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/11.set-attribute-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/11.set-attribute-oracle.md
@@ -38,7 +38,7 @@ OceanBase 数据库当前版本支持如下作业相关的属性值。
 |--------------------|-------------------------|
 | auto_drop          | 该属性可以设置为 `TRUE` 或者 `FALSE`，如果设置为 `TRUE`，则会导致作业在完成后自动删除或自动禁用。 如果出现以下情况，则认为作业已完成： <ul><li> 作业结束日期（或作业计划的结束日期）已过。   </li><li> 作业已运行 `max_runs` 次。必须使用 `SET_ATTRIBUTE` 设置 `max_runs`。   </li><li> 该作业非重复的作业，只运行过一次。</li></ul>    当作业执行失败 `max_failures` 次时，将被禁用。`max_failures` 也使用 `SET_ATTRIBUTE` 设置。 如果 `auto_drop` 设置为 `FALSE`，则不会删除作业，并保留其元数据，直到使用 `DROP_JOB` 过程显式删除作业。 默认情况下，创建作业时将 `auto_drop` 设置为 `TRUE`。 |
 | comments           | 注释，为可选项。    |
-| credential_name    | 此属性指定用于远程数据库作业、远程外部作业、本地外部作业、脚本作业等凭据对象的名称。 对于本地数据库作业，它的值必须为 `NULL`。仅对于本地外部作业，如果此属性为 `NULL`（默认），则选择首选（默认）凭据。   |
+| credential_name    | 此属性指定用于作业的凭据对象的名称。 对于本地数据库作业，它的值必须为 `NULL`。仅对于本地外部作业，如果此属性为 `NULL`（默认），则选择首选（默认）凭据。   |
 | destination_name   | 指定作业的数据库目标或外部目标。仅用于远程数据库作业和远程外部作业。对于在本地数据库上运行的作业或本地外部作业（可执行文件），此属性必须为 `NULL`。  |
 | end_date           | 指定作业过期且不再运行的日期和时间。在 `end_date` 之后，如果 `auto_drop` 为 `TRUE`，则作业将被删除。如果 `auto_drop` 为 `FALSE`，则作业被禁用，而且作业的 `STATE` 设置为 `COMPLETED`。 如果未指定 `end_date` 的值，则作业将被一直重复执行，除非设置了 `max_runs` 或者 `max_failures`，在这种情况下，当达到其中任一值时，作业将停止运行。 `end_date` 的值必须在 `start_date` 的值之后，否则会报错。如果 `end_date` 的值与 `start_date` 的值相同，则作业不会被执行，但也不会报错。    |
 | job_action         | 作业执行的操作，具体值取决于 `job_type` 属性。例如，如果作业类型为 `STORED_PROCEDURE`，则 `job_action` 包含存储过程的名称。   |
@@ -50,8 +50,8 @@ OceanBase 数据库当前版本支持如下作业相关的属性值。
 | max_runs           | 此属性指定作业连续运行的最大次数。一旦达到最大运行时间，作业将被禁用，其状态将更改为 `COMPLETED`。 最大运行次数可以是 1 到 1000000 之间的整数。默认设置为 `NULL`，表示永远重复执行，或直到达到 `end_date` 或 `max_failures` 的值时才停止执行。   |
 | number_of_argument | 指定内联程序的作业的参数数量。如果设置了此选项，`program_name` 的值应该为 `NULL`。   |
 | program_name       | 与此作业关联的程序的名称。如果程序类型为 `EXECUTABLE`，则 `job_action`、`job_type` 和 `number_of_arguments` 的值应该为 `NULL`。   |
-| repeat_interval    | 返回下一个运行日期和时间的 PL 函数，或日历语法表达式。如果设置了此选项，则`schedule_name` 的值应该为 `NULL`。  |
-| start_date         | 此作业开始或计划开始的初始日期和时间。 如果设置了此选项，则 `schedule_name` 的值应该为 `NULL`。   |                                                                                                                                             
+| repeat_interval    | 返回下一个运行日期和时间的 PL 函数，或日历语法表达式。如果设置了此选项，则 `schedule_name` 的值应该为 `NULL`。  |
+| start_date         | 此作业开始或计划开始的初始日期和时间。 如果设置了此选项，则 `schedule_name` 的值应该为 `NULL`。   |  
 
 ### 程序属性值 
 
@@ -76,8 +76,6 @@ OceanBase 数据库当前版本支持如下作业相关的属性值。
 * 如果在作业运行时更改了作业的任何程序属性，则更改后的程序属性将在下次作业运行时生效。作业的程序属性包括 `program_name`、`job_action`、`job_type` 和 `number_of_arguments`。
 
 * 如果在作业运行时更改了任何作业参数值，则更改后的值将在下次作业运行时生效。
-
-* 授予作业的 `ALTER` 权限允许用户更改该作业的所有属性，但其程序属性除外（`program_name`、`job_action`、`job_type` 和 `number_of_arguments`），并且不允许用户使用 PL 表达式指定作业的计划。
 
 * 如果更改了计划，更改不会影响正在运行的作业。只有在下次作业运行时，更改才会生效。
 
