--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/2.create-job-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/14.pl-system-package-oracle/142.dbms-scheduler-oracle/2.create-job-oracle.md
@@ -55,12 +55,12 @@ max_run_duration    IN  BINARY_INTEGER DEFAULT 0);
 
 |         参数        |       说明           |
 |--------------------|-----------------------|
-| job_name           | 指定作业的名称。该名称在 SQL 命名空间中必须是唯一的。 如果正在创建的作业属于另一个 Schema，则必须使用 Schema 名称对其进行限定。如果未指定作业名称，则会报错。 也可以使用 `GENERATE_JOB_NAME` 过程由 Scheduler 生成名称，该名称是通过序列生成的数字，可以将字符串作为数字的前缀，则作业名称将是带有序列号的字符串，然后用于 `CREATE_JOB` 过程。   |
-| job_type           | 指定要创建的作业的类型。如果未指定，则会生成错误。 当前版本仅支持 `STORED_PROCEDURE` 用于指定作业是 PL 或 Java 存储过程，或外部 C 子程序。该参数只支持过程，不支持带有返回值的函数。   |
+| job_name           | 指定作业的名称。该名称在 SQL 命名空间中必须是唯一的。 如果正在创建的作业属于另一个 Schema，则必须使用 Schema 名称对其进行限定。如果未指定作业名称，则会报错。 也可以使用 `GENERATE_JOB_NAME` 由 Scheduler 生成名称，该名称是通过序列生成的数字，可以将字符串作为数字的前缀，则作业名称将是带有序列号的字符串，然后用于 `CREATE_JOB` 过程。   |
+| job_type           | 指定要创建的作业的类型。如果未指定，则会生成错误。当前版本仅支持 `STORED_PROCEDURE`。该参数只支持过程，不支持带有返回值的函数。   |
 | job_action         | 指定作业的操作。如果没有为内联程序指定 `job_action`，则在创建作业时会报错。 `job_action` 在自治事务内执行，并遵从于所有自治事务准则和限制。对于存储过程，`job_action` 是存储过程的名称。如果过程位于作业之外的另一个 Schema 中，则必须指定 Schema。如果需要区分大小写，请将 Schema 名称和存储过程名称用双引号括起来。例如 `job_action_proc=>'"Schema"."myProc "'`。 当作业或程序的类型为 `STORED_PROCEDURE` 时，`job_action` 不支持带有 `INOUT` 或 `OUT` 参数的 PL 过程。   |
 | number_of_argument | 指定作业所需的参数数量。该参数的取值范围为 \[0,255\]，默认值为 0。   |
-| program_name       | 与此作业关联的程序的名称。如果程序类型为 `EXECUTABLE`，则作业所有者必须拥有 `CREATE EXTERNAL JOB` 权限，才能启用或运行作业。   |
-| start_date         | 指定此作业计划首次执行的日期和时间。如果 `start_date` 和 `repeat_interval` 为空，那么该作业一旦启用就会运行。 对于使用日历表达式指定重复间隔的重复作业，`start_date` 用作参考日期。当作业第一次满足日历表达式的时间执行时，该时间必须是当前时间或者当前时间之后的时间。 由于系统可能超载二造成资源不可用，所以 Scheduler 不能保证作业的执行时间是精确的。|
+| program_name       | 与此作业关联的程序的名称。   |
+| start_date         | 指定此作业计划首次执行的日期和时间。如果 `start_date` 和 `repeat_interval` 为空，那么该作业一旦启用就会运行。 |
 | repeat_interval    | 指定作业重复的频率。可以使用日历表达式或 PL 表达式指定重复间隔。通过对指定的表达式求值，来确定作业下次运行的时间。如果未指定 `repeat_interval`，则作业仅在指定的开始日期运行一次。<br> **说明** 该参数设置空会报错，但不影响功能使用。</br>   |
 | end_date           | 指定作业过期时间，即不再运行的日期和时间。 在 `end_date` 之后，如果 `auto_drop` 为 `TRUE`，则作业将被删除。如果 `auto_drop` 为 `FALSE`，则作业被禁用，而且作业的 `STATE` 设置为 `COMPLETED`。 如果未指定 `end_date` 的值，则作业将被一直重复执行，除非设置了 `max_runs` 或者 `max_failures`，在这种情况下，当达到其中任一值时，作业将停止运行。 `end_date` 的值必须在 `start_date` 的值之后，否则会报错。如果 `end_date` 的值与 `start_date` 的值相同，则作业不会被执行，也不会报错。 |
 | job_class          | 与此作业相关联的类。 |
@@ -68,8 +68,8 @@ max_run_duration    IN  BINARY_INTEGER DEFAULT 0);
 | auto_drop          | 指定作业在完成或自动禁用后是否自动删除。该属性可以设置为 `TRUE` or `FALSE`，如果设置为 `TRUE`，则会导致作业在完成后自动删除或自动禁用。如果出现以下情况，则认为已完成作业： <ul><li> 作业结束日期（或作业计划的结束日期）已过。   </li><li>作业已运行 `max_runs` 次。必须使用 `SET_ATTRIBUTE` 设置 `max_runs`。   </li><li> 该作业非重复的作业，只运行过一次。</li></ul>    当作业执行失败 `max_failures` 次时，将被禁用。`max_failures` 也使用 `SET_ATTRIBUTE` 设置。 如果 `auto_drop` 设置为 `FALSE`，则不会删除作业，并保留其元数据，直到使用 `DROP_JOB` 过程显式删除作业。默认情况下，创建作业时将 `auto_drop` 设置为 `TRUE`。                                |
 | comments           | 添加作业的注释。默认情况下，该属性为 `NULL`。  |
 | job_style          | 指定正在创建的作业的样式。 此属性可能的取值如下： <ul><li> `'REGULAR' `：创建常规工作，为默认设置。   </li><li> `'LIGHTWEIGHT'`：创建轻量级作业。仅当作业引用程序对象时，才允许使用此值。当您需要频繁运行许多短期作业时，建议使用轻量级作业。在某些情况下，使用轻量级作业可以带来较小的性能提升。   </li><li> `'IN_MEMORY_RUNTIME'`：创建内存内运行时作业。这些作业基于轻量级工作结构，它们通过保持内存内缓存进一步提高了性能，因此可以最大限度地减少运行前和运行后操作的磁盘访问。   </li><li> `'IN_MEMORY_FULL'`：创建内存内已满的作业。内存中的完整作业需要一个程序，不能有时间计划或重复间隔。当作业启用时，它们会自动运行，运行后会被丢弃。它们将所有作业信息保存在内存中，不会备份到磁盘上，也就是说在实例重新启动时这些信息会丢失。它们的目的是以尽可能少的开销运行必须立即执行的操作。 </li></ul>    |
-| credential_name    | 指定与作业一起使用的默认凭据。凭证必须存在。仅适用于远程数据库作业、远程外部作业、本地外部作业、脚本作业等。 对于本地数据库作业，它的值必须为 `NULL`。仅对于本地外部作业，如果此属性为 `NULL`（默认），则选择首选（默认）凭据。   |
-| destination_name   | 指定作业的数据库目标或外部目标。仅用于远程数据库作业和远程外部作业。对于在本地数据库上运行的作业或本地外部作业（可执行文件），此属性必须为 `NULL`。此属性可以是单个目标名称，也可以是 `EXTERNAL_DEST` 或 `DB_DEST` 类型的组的名称。单一目标或组必须已存在。如果 `CREATE_JOB` 的 `credential_name` 参数为 `NULL`，则每个目的地前面必须有一个凭据，格式如下： ```sql credential.destination ```    |
+| credential_name    | 指定与作业一起使用的默认凭据。对于本地数据库作业，它的值必须为 `NULL`。仅对于本地外部作业，如果此属性为 `NULL`（默认），则选择首选（默认）凭据。   |
+| destination_name   | 指定作业的数据库目标或外部目标。如果 `CREATE_JOB` 的 `credential_name` 参数为 `NULL`，则每个目的地前面必须有一个凭据，格式如下： `sql credential.destination`。    |
 | max_run_duration   | 指定作业的最长运行时间。 |
 
 
@@ -77,8 +77,70 @@ max_run_duration    IN  BINARY_INTEGER DEFAULT 0);
 
 默认情况下，用户所创建的作业是被禁用的，必须显示启用作业，以便可以按照计划运行作业。
 
-用户要在自己的 Schema 中创建作业，需要具有 `CREATE JOB` 权限。具有 `CREATE ANY JOB` 权限的用户可以在任何 Schema 中创建作业。如果正在创建的作业将驻留在另一个 Schema 中，则必须使用 Schema 名称限定作业名称。对于 `EXECUTABLE` 类型的作业（或指向 `EXECUTABLE` 类型程序的作业），作业所有者必须具有 `CREATE EXTERNAL JOB` 权限，才能启用或运行作业。
-
 如果要将作业与指定类或程序相关联，需要具有该类或程序的 `EXECUTE` 权限。
 
 并不是所有可能的作业属性都可以用 `CREATE_JOB` 设置，一些参数必须在创建作业后设置。例如 `job_priority` 和 `max_runs` 等参数需要通过 `SET_ATTRIBUTE` 过程进行设置。
+
+## 示例
+
+```sql
+DECLARE
+    i INTEGER;
+BEGIN
+    SELECT COUNT(*) INTO i FROM user_tables WHERE table_name = 'DBMS_SCHEDULER_T1';
+    IF i = 0 THEN
+        EXECUTE IMMEDIATE  'CREATE TABLE DBMS_SCHEDULER_T1(col DATE)';
+    END IF;
+    SELECT COUNT(*) INTO i FROM user_tables WHERE table_name = 'DBMS_SCHEDULER_T2';
+    IF i = 0 THEN
+        EXECUTE IMMEDIATE  'CREATE TABLE DBMS_SCHEDULER_T2(col DATE, job VARCHAR(128), job_name VARCHAR(128))';
+    END IF;
+END/
+
+
+
+CREATE OR REPLACE PACKAGE JOB_UTILS IS
+  PROCEDURE insert_date;
+  PROCEDURE insert_date_program ( job IN VARCHAR2, job_name IN VARCHAR2); 
+END/
+
+
+
+CREATE OR REPLACE PACKAGE BODY JOB_UTILS IS
+  PROCEDURE insert_date IS
+  BEGIN
+    INSERT INTO DBMS_SCHEDULER_T1 VALUES(TO_CHAR(sysdate));
+    COMMIT;
+  END;
+  PROCEDURE insert_date_program ( job IN VARCHAR2, job_name IN VARCHAR2) IS
+  BEGIN
+    INSERT INTO DBMS_SCHEDULER_T2 VALUES(sysdate, job, job_name);
+    COMMIT;
+  END;
+END/
+
+
+
+
+ BEGIN
+     DBMS_SCHEDULER.CREATE_JOB(
+             job_name => dbms_scheduler.generate_job_name,
+             job_type => 'STORED_PROCEDURE',
+             job_action => 'JOB_UTILS.insert_date',
+            number_of_argument  => 5,  
+            start_date  => sysdate ,
+             repeat_interval => 'FREQ=SECONDLY; INTERVAL=8',
+            end_date  =>sysdate + 100 ,
+            job_class   =>'DEFAULT_JOB_CLASS',
+            enabled => true,
+            auto_drop => true,
+            comments =>'test' ,
+           credential_name => 'null',
+            destination_name => 'null');
+           COMMIT;
+       END / 
+
+--在业务租户查看运行情况：
+SELECT JOB_NAME,enabled,NEXT_RUN_DATE,state,last_start_date FROM DBA_SCHEDULER_JOBS;
+
+```
