--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/216.tenant_task_queue_size.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/216.tenant_task_queue_size.md
@@ -1,5 +1,7 @@
 # tenant_task_queue_size
 
+`tenant_task_queue_size` 用于设置每个租户的请求队列大小。
+
 |      **属性**      |   **描述**    |
 |------------------|-------------|
 | 参数类型             | 整型          |
