--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/252.minor_freeze_times.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/252.minor_freeze_times.md
@@ -1,8 +1,11 @@
-minor_freeze_times 
-=======================================
+# minor_freeze_times
 
 `minor_freeze_times` 用于设置多少次小合并触发一次全局合并。
 
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>从 V4.0.0 版本开始弃用。</p>
+</main>
 
 |      **属性**      |    **描述**    |
 |------------------|--------------|
@@ -14,11 +17,7 @@ minor_freeze_times
 <main id="notice" type='explain'>
   <h4>说明</h4>
   <ul>
-  <li>  从 V4.0.0 版本开始弃用。 </li>
   <li> 该配置项的取值为 0 时，表示无论转储多少次也不会触发合并。 </li>
   <li> 该配置项与 <code>major_compact_trigger</code> 配置项具有相同功能。 </li>
   </ul>
 </main>
-
-
-
