--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -449,7 +449,7 @@ ORA-00900：invalid SQL statement
 
 * 解决方法：请参考您的 OceanBase 数据库对应版本的《SQL 参考（Oracle 模式）》查找正确的 SQL 语句。
 
-# ORA-00900：You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for theright syntax to use
+## ORA-00900：You have an error in your SQL syntax; check the manual that corresponds to your OceanBase version for theright syntax to use
 
 * OceanBase 错误码：5006
 
