--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -63,7 +63,7 @@ opt_set_sys_var:
 * 创建名为 `test_tenant` 的一个 2 副本并开启仲裁服务的 MySQL 租户（创建新租户默认是 MySQL 租户）。
 
   ```sql
-  obclient> CREATE TENANT IF NOT EXISTS test_tenant CHARSET='utf8mb4', ZONE_LIST=('zone1','zone2'), PRIMARY_ZONE='zone1;zone2', RESOURCE_POOL_LIST=('pool1');
+  obclient> CREATE TENANT IF NOT EXISTS test_tenant CHARSET='utf8mb4', ZONE_LIST=('zone1','zone2'), PRIMARY_ZONE='zone1;zone2', RESOURCE_POOL_LIST=('pool1') ENABLE_ARBITRATION_SERVICE = true;
   ```
 
 * 创建名为 `test_tenant` 的一个 3 副本 Oracle 租户。
