--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/136.memory_limit.md
@@ -6,7 +6,7 @@ memory_limit
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>  该变量从 V4.1.0 版本开始取值范围由 [4G, +∞) 调整为 [1G, +∞)。   </p>
+  <p>  该配置项从 V4.1.0 版本开始取值范围由 [4G, +∞) 调整为 [1G, +∞)。   </p>
 </main>
 
 
