--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/250.log_archive_concurrency.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/250.log_archive_concurrency.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>4.1.0 版本取值范围调整为 [1,10]，取值大于 10 时默认以 10 生效。</p>
+  <p>从 V4.1.0 版本取值范围调整为 [1,100]，取值大于 10 时默认以 10 生效。</p>
 </main>
 
 | **属性** | **描述** |
