--- a/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/6.restore-data/2.initiate-the-tenant-restore.md
@@ -1,6 +1,6 @@
 # 执行物理恢复
 
-本节主要介绍如何通过命令的方式进行租户级物理恢复，目前 OceanBase 数据库支持租户级别的基于时间点的全量恢复。
+本节主要介绍如何通过命令的方式进行租户级物理恢复，目前 OceanBase 数据库支持租户级别的基于时间点的全量恢复，并且支持同集群恢复，也支持跨集群恢复。
 
 恢复会先根据用户输入的命令，从备份目的端将需要的宏块数据从对应的全量备份和增量备份中恢复到目标租户，并同步拉取和回放事务日志。
 
