--- a/en-US/7.reference/3.performance-tuning-guide/6.performance-whitepaper/3.run-the-sysbench-benchmark-test-in-oceanbase-database.md
+++ b/en-US/7.reference/3.performance-tuning-guide/6.performance-whitepaper/3.run-the-sysbench-benchmark-test-in-oceanbase-database.md
@@ -209,7 +209,7 @@ create tenant tt1 replica_num = 1,primary_zone='zone1', resource_pool_list=('poo
     | --with-mysql-libs | Specifies the lib directory of mysql. |
     | --with-mysql | Sysbench supports MySQL by default. |
 
-4. Run the following command to verify that the Sysbench is successfully installed
+4. Run the following command to verify that the Sysbench is successfully installed.
 
     ```bash
     [wieck@localhost sysbench-1.0.20] $./src/sysbench --help
