--- a/en-US/7.reference/3.performance-tuning-guide/6.performance-whitepaper/3.run-the-sysbench-benchmark-test-in-oceanbase-database.md
+++ b/en-US/7.reference/3.performance-tuning-guide/6.performance-whitepaper/3.run-the-sysbench-benchmark-test-in-oceanbase-database.md
@@ -202,7 +202,7 @@ create tenant tt1 replica_num = 1,primary_zone='zone1', resource_pool_list=('poo
 
     **Parameter description**
 
-    | 参数名 | 说明 |
+    | Parameter Name | Description |
     | --- | --- |
     | --prefix | The installation directory of the Sysbench. |
     | --with-mysql-includes | Specifies the includes directory of mysql. |
@@ -258,7 +258,7 @@ alter system set _enable_defensive_check = false;
 
     **Parameter description**
 
-    | 参数名 | 说明 |
+    | Parameter Name | Description |
     | --- | --- |
     | --mysql-host | The IP address of the machine running OceanBase the database. If you have an ODP, we recommend that you use the IP address of the ODP. |
     | --mysql-port | Port number. |
