--- a/en-US/7.reference/3.performance-tuning-guide/6.performance-whitepaper/3.run-the-sysbench-benchmark-test-in-oceanbase-database.md
+++ b/en-US/7.reference/3.performance-tuning-guide/6.performance-whitepaper/3.run-the-sysbench-benchmark-test-in-oceanbase-database.md
@@ -19,11 +19,11 @@ Available test modes are implemented by compiled-in modules, and SysBench was de
 
 ## Environment
 
-* JDK：We recommend that you use version 1.8u131 or later
-* mariadb-devel：yum install mariadb-devel mariadb
-* JDBC：mysql-connector-java-5.1.47 or later
-* Sysbench：We recommend that you use 1.0 or later.
-* DISK IOPS：We recommend that the disk iops exceed 10,000.
+* JDK:We recommend that you use version 1.8u131 or later
+* mariadb-devel:yum install mariadb-devel mariadb
+* JDBC:mysql-connector-java-5.1.47 or later
+* Sysbench:We recommend that you use 1.0 or later.
+* DISK IOPS:We recommend that the disk iops exceed 10,000.
 * Tenant specifications:
 
     ```sql
