--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/1.oracle-mode/1.partition-overview-of-oracle-mode.md
@@ -30,10 +30,13 @@ OceanBase 数据库 Oracle 模式目前支持的分区类型如下：
 
 Range 分区根据分区表定义时为每个分区建立的分区键值范围，将数据映射到相应的分区中。它是常见的分区类型，经常跟日期类型一起使用。例如：可以将业务日志表按日/周/月分区。
 
+Range 分区的分区键必须为列名，不能使用表达式，支持数值类型、字符串类型、时间类型（除了 TIMESTAMP WITH TIME ZONE 类型和 TIMESTAMP WITH LOCAL TIME ZONE 类型）、Interval 类型、RAW 类型等。
+
 ### List 分区
 
 List 分区使得您可以显式的控制记录行如何映射到分区，具体方法是为每个分区的分区键指定一组离散值列表，这点跟 Range 分区和 Hash 分区都不同。List 分区的优点是可以方便的对无序或无关的数据集进行分区。
 
+List 分区的分区键由一个或多个列组成，可以使用表达式，支持数值类型、字符串类型、时间类型（除了 TIMESTAMP WITH TIME ZONE 类型和 TIMESTAMP WITH LOCAL TIME ZONE 类型）、Interval 类型、RAW 类型等。
 ### Hash 分区
 
 Hash 分区适合于对不能用 Range 分区、List 分区方法的场景，它的实现方法简单，通过对分区键上的 Hash 函数值来散列记录到不同分区中。如果您的数据符合下列特点，使用 Hash 分区是个很好的选择：
@@ -45,6 +48,8 @@ Hash 分区适合于对不能用 Range 分区、List 分区方法的场景，它
 * 使用 Range 分区后数据聚集严重。
 
 * 并行 DML、分区剪枝和分区连接等性能非常重要。
+
+Hash 分区的分区键由一个或多个列组成，可以使用表达式，支持数值类型、字符串类型、时间类型（除了 TIMESTAMP WITH TIME ZONE 类型和 TIMESTAMP WITH LOCAL TIME ZONE 类型）、Interval 类型、RAW 类型等。
 
 ### 组合分区
 
