410：In TPC-C testing Change jdbc:oceanbase to jdbc:mysql2

--- a/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
+++ b/zh-CN/2.quickstart/5.experience-advanced-features-of-oceanbase/1.experience-scalable-oltp/1.run-the-tpc-c-test-on-oceanbase-database.md
@@ -204,7 +204,7 @@ TPC 组织为 TPC-C 定义了严格、详细的测试标准。一般情况下开
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p><ul><li><code>db</code>：指定数据库类型。此处保持和模板一致即可。</li><li><code>driver</code>：推荐使用 MySQL 的 JDBC 驱动：<code>mysql-connector-java-5.1.47</code>，<a href="https://downloads.mysql.com/archives/c-j/">驱动下载地址</a>。</li><li><code>conn</code>：此处的 IP 建议填写 OceanBase Server 的 IP，端口为 OceanBase Server 部署端口，其他部分保持和模板一致。</li><li><code>user</code> & <code>password</code>：根据环境中使用的用户名、租户名以及密码即可。如果环境中有多个 OceanBase 集群，则 <code>user</code> 的格式建议为 <code>{user_name}@{tenant_name}#{cluster_name}</code>。</li><li><code>warehouses</code>：指定仓库数，仓库数决定性能测试的成绩。如果希望针对多节点的 OceanBase 集群进行测试，建议选择 1000 仓以上。如果机器配置有限，可以选择 100 仓进行测试。</li><li><code>loadWorkers</code>：指定仓库数据加载时的并发。如果机器配置较高，该值可以设置大一些，例如 100。如果机器配置有限，该值需要设置小一些，如 10 并发。过高的并发可能会导致内存消耗太快，出现报错，导致数据加载需要重新进行。</li><li><code>terminals</code>：指定性能压测时的并发数。建议并发数不要高于仓库数 * 10。否则，会有不必要的锁等待。在生产环境中，建议将此参数设置为最多 1000。在测试环境中，建议从 100 开始。</li><li><code>runMins</code>：指定性能测试持续的时间。时间越久，越能考验数据库的性能和稳定性。建议不要少于 10 分钟，生产环境中机器建议不少于 1 小时。</li></p>
+  <p><ul><li><code>db</code>：指定数据库类型。此处保持和模板一致即可。</li><li><code>driver</code>：驱动程序文件，推荐使用 MySQL 的 JDBC 驱动：<code>mysql-connector-java-5.1.47</code>，<a href="https://downloads.mysql.com/archives/c-j/">驱动下载地址</a>。</li><li><code>conn</code>：此处的 IP 建议填写 OceanBase Server 的 IP，端口为 OceanBase Server 部署端口，其他部分保持和模板一致。</li><li><code>user</code> & <code>password</code>：根据环境中使用的用户名、租户名以及密码即可。如果环境中有多个 OceanBase 集群，则 <code>user</code> 的格式建议为 <code>{user_name}@{tenant_name}#{cluster_name}</code>。</li><li><code>warehouses</code>：指定仓库数，仓库数决定性能测试的成绩。如果希望针对多节点的 OceanBase 集群进行测试，建议选择 1000 仓以上。如果机器配置有限，可以选择 100 仓进行测试。</li><li><code>loadWorkers</code>：指定仓库数据加载时的并发。如果机器配置较高，该值可以设置大一些，例如 100。如果机器配置有限，该值需要设置小一些，如 10 并发。过高的并发可能会导致内存消耗太快，出现报错，导致数据加载需要重新进行。</li><li><code>terminals</code>：指定性能压测时的并发数。建议并发数不要高于仓库数 * 10。否则，会有不必要的锁等待。在生产环境中，建议将此参数设置为最多 1000。在测试环境中，建议从 100 开始。</li><li><code>runMins</code>：指定性能测试持续的时间。时间越久，越能考验数据库的性能和稳定性。建议不要少于 10 分钟，生产环境中机器建议不少于 1 小时。</li></p>
 </main>
 
 ## 数据准备
