--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/103.global_major_freeze_residual_memory.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/103.global_major_freeze_residual_memory.md
@@ -17,7 +17,7 @@ global_major_freeze_residual_memory
 | 是否重启 OBServer 节点生效 | 否         |
 
 
-`global_major_freeze_residual_memory` 配置项是百分比，百分比基数是 memory_limit - system_memory，即除去为 OceanBase 数据库内部 500 租户预留的内存。已经冻结的 MemStore 在 merge 完成后，内存就可以释放，所以冻结的 MemStore 占用的内存在这里被看作是 active_memstore 可以使用的内存，blockcache 可以挤占的那部分内存也被看作是 MemStore 可以使用的内存。
+`global_major_freeze_residual_memory` 配置项是百分比，百分比基数是 `memory_limit - system_memory`，即除去为 OceanBase 数据库内部 500 租户预留的内存。已经冻结的 MemStore 在 merge 完成后，内存就可以释放，所以冻结的 MemStore 占用的内存在这里被看作是 active_memstore 可以使用的内存，blockcache 可以挤占的那部分内存也被看作是 MemStore 可以使用的内存。
 
 
 <main id="notice" type='notice'>
