--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/11.flush.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/11.flush.md
@@ -11,8 +11,7 @@ alter_system_flush_stmt:
   ALTER SYSTEM flush_action;
 
 flush_action:
-    FLUSH LOCATION CACHE [TENANT [=] tenant_list]
-  | FLUSH KVCACHE [TENANT [=] tenant_name] [CACHE [=] cache_name]
+    FLUSH KVCACHE [TENANT [=] tenant_name] [CACHE [=] cache_name]
   | FLUSH PLAN CACHE [ [SQL_identifier] [database_list] tenant_name_list ] [GLOBAL]
 
 tenant_list:
@@ -29,7 +28,6 @@ tenant_name_list:
 
 |       参数     |         描述      |
 |----------------|----------------------|
-| FLUSH LOCATION CACHE   | 清空指定位置缓存。   |
 | FLUSH KVCACHE          | 清空可动态伸缩的内存 KVCache。 <ul><li> 如果指定 `tenant_name` 和 `cache_name`，则清除指定租户的指定 KVCache。</li>   <li> 如果只指定 `tenant_name`，则清除指定租户的全部 KVCache。</li>   <li> 如果不指定 `tenant_name` 和 `cache_name`，则清除所有租户的全部 KVCache。</li></ul>    |
 | FLUSH PLAN CACHE| 清除指定 Database 和 SQL ID 的计划缓存。|
 | SQL_identifier | 用于指定 SQL，格式为 `sql_id = 'xxx'`。 如果不指定该参数，表示清空所有 SQL 的计划缓存。     |
@@ -38,14 +36,6 @@ tenant_name_list:
 | GLOBAL         | 为可选字段。 如果不指定该参数，表示清空本机的计划缓存。反之，则表示清空该租户所在的所有服务器上的计划缓存。    |
 
 ## 示例
-
-
-* 清空位置缓存。
-
-  ```sql
-  obclient> ALTER SYSTEM FLUSH LOCATION CACHE;
-  Query OK, 0 rows affected
-  ```
 
 * 清空所有的 KVCache。
 
