--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/1.system-tenants/3.alter-resource-tenant.md
@@ -19,14 +19,14 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num;
 |  **参数**   |   **描述**   |
 |-----------|------------|
 | tenant_name | 修改配置的租户名称。 |
-| UNIT_NUM [=] unitnum |修改租户下所有资源池的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 个数。 |
+| UNIT_NUM [=] unit_num |修改租户下所有资源池的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 节点个数。 |
 
 示例
 -----------------------
 
-修改租户 tenant1 下所有资源池的 unit_num 个数为 3。
+修改租户 `tenant1` 下所有资源池的 Unit 个数为 3。
 
 ```sql
-obclient> ALTER RESOURCE TENANT tenant1 UNITNUM = 3;
+obclient> ALTER RESOURCE TENANT tenant1 UNIT_NUM = 3;
 Query OK, 0 rows affected 
 ```
