--- a/zh-CN/4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md
@@ -91,7 +91,7 @@ wget https://raw.githubusercontent.com/oceanbase/ob-operator/master/deploy/obclu
 ```
 
 配置文件内容示例如下。
-<!-- OB版本待修改 -->
+
 ```yaml
 apiVersion: cloud.oceanbase.com/v1
 kind: OBCluster
@@ -99,8 +99,8 @@ metadata:
   name: ob-test
   namespace: obcluster
 spec:
-  imageRepo: oceanbasedev/oceanbase-cn
-  tag: v4.1.0.0-100000192023032010
+  imageRepo: oceanbase/oceanbase-ce
+  tag: v4.0.0.0-100000272022110114
   imageObagent: oceanbase/obagent:1.2.0
   clusterID: 1
   topology:
@@ -212,7 +212,7 @@ spec:
     spec:
       containers:
         - name: obproxy
-          image: oceanbasedev/obproxy-ce:4.1.0.0-7
+          image: oceanbase/obproxy-ce:4.0.0-5
           ports:
             - containerPort: 2883
               name: "sql"
