--- a/zh-CN/4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -4,7 +4,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p>OBD 除了支持通过命令行方式部署 OceanBase 数据库生产环境外，也支持通过白屏部署 OceanBase 集群环境。详细操作步骤请参考 <a href="4.deploy-by-ui/1.deploy-by-obd.md">使用 OCP 部署 OceanBase 集群</a>。</p>
+  <p>OBD 除了支持通过命令行方式部署 OceanBase 数据库生产环境外，也支持通过白屏部署 OceanBase 集群环境。详细操作步骤请参考 <a href="3.deploy-by-ocp.md">使用 OCP 部署 OceanBase 集群</a>。</p>
 </main>
 
 ## 名词解释
@@ -27,7 +27,7 @@
 
 * OCP
   
-  OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP。详细信息请参考 [OCP 文档](https://www.oceanbase.com/docs/oceanbase-ocp-cn)。
+  OceanBase Cloud Platform，OceanBase 运维管理工具，简称为 OCP。详细信息请参考 [OCP 文档](https://www.oceanbase.com/docs/ocp-cn)。
   
 ## 前提条件
 
@@ -121,6 +121,11 @@
 </main>
 
 ### 步骤二：配置 OBD
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>本文以 OBD V1.6.2 为例提供操作指导。不同 OBD 版本的配置文件可能不同，请以实际配置文件为准。更多 OBD 相关内容请参见 <a href="https://www.oceanbase.com/docs/obd-cn">OBD 文档</a>。</p>
+</main>
 
 如果是离线部署 OceanBase 集群，可参考 **步骤一** 在中控机上下载并安装 all-in-one 安装包，all-in-one 安装包提供的组件已经经过相互适配测试，为官方推荐版本。
 
