--- a/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
+++ b/zh-CN/2.quick-start/0.Quickly-experience-OceanBase.md
@@ -12,12 +12,12 @@
 |CPU|测试环境最低要求 2 核，推荐 4 核及以上。|
 |内存|测试环境最低要求 8 G，推荐 16G 及以上。|
 |磁盘类型|推荐使用 SSD。|
-|磁盘存储空间|内存大小的 6 倍及以上。|
+|磁盘存储空间|最低要求 54 GB。|
 |文件系统|EXT4 戓 XFS，当数据超过 16T 时，使用 XFS。|
 
 > **说明**
 >
-> 若您选择使用 Docker 部署 OceanBase 数据库，则内存最低要求 8G。
+> 若您选择使用 Docker 部署 OceanBase 数据库，则需确保机器资源可以运行 2 核 8GB 以上的 Docker。
 
 ## 使用 OBD 部署 OceanBase 数据库
 
