--- a/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
+++ b/en-US/2.quickstart/5.experience-advanced-features-of-oceanbase/4.experience-multi-tenant-features.md
@@ -82,7 +82,7 @@ If the preceding statement succeeds, you have created two tenants in the same cl
 Log on as the `root` user to the `tenant1` tenant of the cluster and create a test table.
 
 ```sql
-obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p
+obclient -hXXX.XX.XXX.106 -P2883 -uroot@tenant1#ob_test -p******
 obclient [(none)]> SHOW DATABASES;
 +--------------------+
 | Database           |
@@ -111,7 +111,7 @@ obclient [test]> SHOW TABLES;
 Log on as the `root` user to the `tenant2` tenant of the cluster and view the `test` database.
 
 ```sql
-obclient -h***.**.***.106 -P2883 -uroot@tenant2#ob_test -p
+obclient -h***.**.***.106 -P2883 -uroot@tenant2#ob_test -p******
 
 obclient [(none)]> SHOW DATABASES;
 +--------------------+
