--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/1.configure-deployment-environment/1.deploy-oat.md
@@ -46,8 +46,8 @@ Docker CE 17.03 or later is installed on your server.
 
    ```bash
    [root@xxx /home/admin/rpm]
-   #scp oat_4.0.0_20221202_x86.tar admin@10.10.10.1:/home/admin/rpm
-   admin@10.10.10.1's password:
+   #scp oat_4.0.0_20221202_x86.tar admin@xxx.xxx.xxx.xxx:/home/admin/rpm
+   admin@xxx.xxx.xxx.xxx's password:
    oat_4.0.0_20221202_x86.tar                        100% 1292MB 275.4MB/s   00:04
    ```
 
