--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
@@ -4,7 +4,7 @@ A three-replica OceanBase cluster requires at least three hosts respectively loc
 
 This topic describes how to install a three-replica OceanBase cluster through RPM packages.
 
-## Note
+## Considerations
 
 If you want to implement resource isolation for your OceanBase database, configure cgroups before the deployment.
 
@@ -222,20 +222,26 @@ store/
    optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
    ```
 
-   You can use the `netstat -ntlp` command to view whether the observer process has started. If ports 2881 and 2882 have been listened to, the observer process has started.
+   You can use the following commands to check whether the observer processhas started successfully:
+
+   * `netstat -ntlp`: If the 2881 and 2882 ports are being listened to, then the process has started successfully.
+   * `ps -ef|grep observer`: This command can return the observer process information.
+
 
    Example:
 
    ```sql
    -bash-4.2$ netstat -ntlp
    (Not all processes could be identified, non-owned process info
-    will not be shown, you would have to be root to see it all.)
+   will not be shown, you would have to be root to see it all.)
    Active Internet connections (only servers)
    Proto Recv-Q Send-Q Local Address           Foreign Address         State       PID/Program name
-   tcp        0      0 0.0.0.0:2881            0.0.0.0:*               LISTEN      45576/observer
-   tcp        0      0 0.0.0.0:2882            0.0.0.0:*               LISTEN      45576/observer
-   tcp        0      0 127.0.0.1:9001          0.0.0.0:*               LISTEN      -
-   tcp        0      0 0.0.0.0:22              0.0.0.0:*               LISTEN      -
+   tcp        0      0 0.0.0.0:2881            0.0.0.0:*               LISTEN      115745/observer
+   tcp        0      0 0.0.0.0:2882            0.0.0.0:*               LISTEN      115745/observer
+   ...        ...    ...                       ...                     ...         ...
+
+   -bash-4.2$ ps -ef|grep observer
+   admin     91335      0 40 16:18 ?        00:00:17 /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r 10.10.10.1:2882:2881;10.10.10.2:2882:2881 -c 10001 -n obdemo -o system_memory=30G,datafile_size=100G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
    ```
 
 2. Perform the bootstrap operation on the cluster.
