--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -98,7 +98,7 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
    # mysql serverId
    canal.instance.mysql.slaveId = 1234
    # Specify the position information of your database.
-   canal.instance.master.address = 10.10.10.1:3306
+   canal.instance.master.address = xxx.xxx.xxx.xxx:3306
    canal.instance.master.journal.name =
    canal.instance.master.position =
    canal.instance.master.timestamp =
@@ -190,7 +190,7 @@ canal.adapter supports multiple containers. For OceanBase Database, the canal.ad
          key: test_mysql_to_ob
          properties:
            jdbc.driverClassName: com.mysql.jdbc.Driver
-           jdbc.url: jdbc:mysql://10.10.10.1:2883/test_data?useUnicode=true
+           jdbc.url: jdbc:mysql://xxx.xxx.xxx.xxx:2883/test_data?useUnicode=true
            jdbc.username: root@mysql001#test4000
            jdbc.password: 1****6  
    ```
