--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/6.use-flink-cdc-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/6.use-flink-cdc-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -28,7 +28,7 @@ Prepare test data in the MySQL database and use the test data as the source data
 
    ```bash
    [xxx@xxx /...]
-   $mysql -h10.10.10.1 -P3306 -uroot -p
+   $mysql -hxxx.xxx.xxx.xxx -P3306 -uroot -p
    Enter password:
    <Omit echo information>
 
@@ -156,7 +156,7 @@ Flink SQL> CREATE TABLE mysql_tbl1 (
     col3 INT) 
     WITH (
     'connector' = 'mysql-cdc',
-    'hostname' = '10.10.10.1',
+    'hostname' = 'xxx.xxx.xxx.xxx',
     'port' = '3306',
     'username' = 'root',
     'password' = '123456',
@@ -167,7 +167,7 @@ Flink SQL> CREATE TABLE mysql_tbl1 (
 Flink SQL> CREATE TABLE mysql_tbl2 (col1 INT PRIMARY KEY,
     col2 VARCHAR(20))
     WITH ('connector' = 'mysql-cdc',
-    'hostname' = '10.10.10.1',
+    'hostname' = 'xxx.xxx.xxx.xxx',
     'port' = '3306',
     'username' = 'root',
     'password' = '123456',
