--- a/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
+++ b/en-US/5.data-migration/3.migrate-data-from-oceanbase-database-to-mysql-database/4.use-cloudcanal-to-migrate-data-from-oceanbase-database-to-mysql-database.md
@@ -18,7 +18,7 @@ This topic describes how to use CloudCanal Community Edition V2.2.6.9 to migrate
 
 2. oblogproxy has been installed and deployed. 
    
-   <!-- For more information, see [Install oblogproxy](http://11.124.9.83:19898/obdoc/oms-enterprise/V3.4.0/zh-CN/index.html#/5.1.install-oblogproxy.html). -->
+   <!-- For more information, see [Install oblogproxy](https://www.oceanbase.com/docs/enterprise-oms-doc-cn-10000000001508519). -->
 
 ## Procedure
 
