--- a/en-US/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
+++ b/en-US/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
@@ -126,7 +126,7 @@ Optional parameters:
 The following example exports the schemas of all objects from the `TESTDB` database in DB2 LUW 11.5.x and migrates the schemas to a MySQL tenant in a cluster of OceanBase Database V4.0.0. 
 
 ```bash
-bin/dbcat convert -H 100.88.109.129 -P 50001 -udb2inst2 -pdb2inst2 --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
+bin/dbcat convert -H xxx.xxx.xxx.xxx -P 50001 -udb2inst2 -p****** --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
 ```
 
 Notice:
