--- a/en-US/6.manage/0.log-in-oceanbase-tenant.md
+++ b/en-US/6.manage/0.log-in-oceanbase-tenant.md
@@ -108,7 +108,7 @@ For details about connecting to the OceanBase Database through the OBClient, see
    Cluster O&M commands can be executed through the system tenant. For example, run the following command to isolate an abnormal node:
 
    ```shell
-   obclient> ALTER SYSTEM STOP SERVER '6.0.132.81:2882';
+   obclient> ALTER SYSTEM STOP SERVER 'xx.xx.xx.xx:2882';
    ```
 
    After the command is executed, you can confirm whether the isolation is successful by checking the `STOP_TIME` field of the node in the `DBA_OB_SERVERS` view.
