--- a/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/10.other-functions-of-mysql-mode/16.inet6-aton-of-mysql-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/10.other-functions-of-mysql-mode/16.inet6-aton-of-mysql-mode.md
@@ -24,7 +24,7 @@ Limits on arguments of the `INET6_ATON()` function:
 
 * Hexadecimal characters are not allowed in an address, as in 198.0xa0.1.2.
 
-* Octal numbers are not supported. For example, 198.51.010.1 is considered 198.51.10.1 rather than 198.51.8.1.
+* Octal numbers are not supported. For example, 198.xx.010.1 is considered 198.xx.10.1 rather than 198.xx.8.1.
 
 These limits on IPv4 addresses also apply to IPv6 addresses containing an IPv4 address part, such as IPv4-compatible IPv6 addresses or IPv4-mapped addresses.
 
