--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/3.configure-clock-source-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/3.configure-clock-source-command-line.md
@@ -83,7 +83,7 @@ Perform the following steps to configure the NTP clock source.
 remote          refid       st  t  when  poll reach delay offset jitter
 ========================================================================
 LOCAL(0)        .LOCL.      10  l  589   64   0     0.000 0.000  0.000
-*192.168.XX.XX  10.10.10.1  2   u  18    64   377   1.591 0.249  0.054
+*192.168.XX.XX  xxx.xxx.xxx.xxx  2   u  18    64   377   1.591 0.249  0.054
 ```
 
 Parameters in the result of the `ntpq` command:
