update image in k8s

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/3.deploy-in-the-k8s-cluster.md
@@ -99,8 +99,8 @@ metadata:
   name: ob-test
   namespace: obcluster
 spec:
-  imageRepo: oceanbasedev/oceanbase-cn
-  tag: v4.1.0.0-100000192023032010
+  imageRepo: oceanbase/oceanbase-cloud-native
+  tag: 4.1.0.0-100000192023032010
   imageObagent: oceanbase/obagent:1.2.0
   clusterID: 1
   topology:
@@ -212,7 +212,7 @@ spec:
     spec:
       containers:
         - name: obproxy
-          image: oceanbasedev/obproxy-ce:4.1.0.0-7
+          image: oceanbase/obproxy-ce:4.1.0.0-7
           ports:
             - containerPort: 2883
               name: "sql"
