--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -108,7 +108,7 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
    #canal.instance.standby.timestamp =
    # Specify the username and password of your database.
    canal.instance.dbUsername = canal  
-   canal.instance.dbPassword = 123456
+   canal.instance.dbPassword = ******
    canal.instance.defaultDatabaseName =
    canal.instance.connectionCharset = UTF-8
    #table regex
@@ -192,7 +192,7 @@ canal.adapter supports multiple containers. For OceanBase Database, the canal.ad
            jdbc.driverClassName: com.mysql.jdbc.Driver
            jdbc.url: jdbc:mysql://xxx.xxx.xxx.xxx:2883/test_data?useUnicode=true
            jdbc.username: root@mysql001#test4000
-           jdbc.password: 1****6  
+           jdbc.password: ******
    ```
 
 4. Modify the RDB mapping file. 
