--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md
@@ -126,7 +126,7 @@ Create the proxyro user and grant the `SELECT` privilege to the user.
 $obclient -hxxx.xxx.xxx.1 -P2881 -uroot@sys -p
 Enter password:
 
-obclient [(none)]> CREATE USER proxyro IDENTIFIED BY '123456';
+obclient [(none)]> CREATE USER proxyro IDENTIFIED BY '******';
 Query OK, 0 rows affected
 
 obclient [(none)]> GRANT SELECT ON *.* TO proxyro;
