--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/5.use-canal-to-migrate-data-from-mysql-database-to-oceanbase-database.md
@@ -30,12 +30,12 @@ For more information about Canal, visit <https://github.com/alibaba/canal/releas
 
 2. Create a MySQL database user. 
 
-   Create a user for connecting to the MySQL database. Set the username to `canal` and password to `123456`. Grant the read and write privileges on all databases to the `canal` user. 
+   Create a user for connecting to the MySQL database. Set the username to `canal` and password to `******`. Grant the read and write privileges on all databases to the `canal` user. 
 
    For example:
 
    ```sql
-   MySQL [(none)]> CREATE USER 'canal'@'%' IDENTIFIED BY '123456';
+   MySQL [(none)]> CREATE USER 'canal'@'%' IDENTIFIED BY '******';
    Query OK, 0 rows affected
 
    MySQL [(none)]> GRANT SELECT,REPLICATION SLAVE,REPLICATION CLIENT ON *.* TO 'canal'@'%';
