--- a/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/28.create-user-of-mysql-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/28.create-user-of-mysql-mode.md
@@ -41,16 +41,16 @@ tls_option:
 
 ## Examples
 
-1. Create users `sqluser01` and `sqluser02`, and set their passwords to `123456`.
+1. Create users `sqluser01` and `sqluser02`, and set their passwords to `******`.
 
    ```sql
-   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '123456', 'sqluser02' IDENTIFIED BY '123456';
+   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '******', 'sqluser02' IDENTIFIED BY '******';
    ```
 
 2. Query the users that you created.
 
    ```sql
-   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '123456', 'sqluser02' IDENTIFIED BY '123456';
+   obclient> CREATE USER 'sqluser01' IDENTIFIED BY '******', 'sqluser02' IDENTIFIED BY '******';
    Query OK, 0 rows affected
    obclient> SELECT user FROM mysql.user;
    +-----------+
