--- a/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/207.system_memory.md
+++ b/zh-CN/7.reference/5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/207.system_memory.md
@@ -7,7 +7,7 @@ system_memory
 |      **属性**      |  **描述**   |
 |------------------|-----------|
 | 参数类型             | 容量单位      |
-| 默认值              | 企业版：30G  社区版：0M     |
+| 默认值              | 0M     |
 | 取值范围             | \[0M, +∞) |
 | 是否重启 OBServer 节点生效 | 否         |
 
