--- a/zh-CN/4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md
+++ b/zh-CN/4.installation-and-deployment/3.deploy-in-the-k8s-cluster.md
@@ -100,7 +100,7 @@ metadata:
   namespace: obcluster
 spec:
   imageRepo: oceanbase/oceanbase-ce
-  tag: v4.0.0.0-100000272022110114
+  tag: 4.0.0.0-100000272022110114
   imageObagent: oceanbase/obagent:1.2.0
   clusterID: 1
   topology:
