--- a/zh-CN/4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.installation-and-deployment/2.local-deployment/4.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -438,7 +438,7 @@ obclient -h10.10.10.4 -P2883 -uroot@sys -p -c -A
 
 其中，`IP` 为连接 OceanBase 数据库的 IP 地址；`PORT` 为连接 OceanBase 数据库的的端口，直连时为 mysql_port 配置项的值，通过 ODP 连接时为 listen_port 配置项的值。
 
-使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 租户](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)。
+使用 OBClient 客户端连接 OceanBase 集群的详细操作可参考 [通过 OBClient 连接 OceanBase 数据库](../../3.developer-guide/1.client-connects-to-oceanbase-database/3.connect-oceanbase-tenants-through-obclient.md)。
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -461,7 +461,7 @@ obclient -h10.10.10.4 -P2883 -uroot@sys -p -c -A
 
   该命令默认根据集群剩余全部可用资源创建租户，您可通过配置各个参数控制租户占用资源的多少，命令详细使用方法请参考 OBD 手册 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001690699) 中 `obd cluster tenant create` 命令。
 
-* 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md)
+* 方法二：通过命令行创建用户租户，详细操作可参考 [创建用户租户](../../5.administrator-guide/6.basic-database-management/4.manage-tenants-1/1.1.create-a-user-tenant.md)
 
 ## 相关操作
 
